opengl/gl.h

typedef unsigned int GLenum;
typedef unsigned char GLboolean;
typedef signed char GLbyte;
typedef short GLshort;
typedef int GLint;
typedef int GLsizei;
typedef unsigned char GLubyte;
typedef unsigned short GLushort;
typedef unsigned int GLuint;
typedef float GLfloat;
typedef double GLdouble;
typedef void GLvoid;
typedef void (*PFGLEDGEFLAGVPROC) (const GLboolean *flag);
typedef void (*PFGLENABLEPROC) (GLenum cap);
typedef void (*PFGLENABLECLIENTSTATEPROC) (GLenum array);
typedef void (*PFGLENDPROC) (void);
typedef void (*PFGLENDLISTPROC) (void);
typedef void (*PFGLEVALCOORD1DPROC) (GLdouble u);
typedef void (*PFGLEVALCOORD1DVPROC) (const GLdouble *u);
typedef void (*PFGLEVALCOORD1FPROC) (GLfloat u);
typedef void (*PFGLEVALCOORD1FVPROC) (const GLfloat *u);
typedef void (*PFGLEVALCOORD2DPROC) (GLdouble u, GLdouble v);
typedef void (*PFGLEVALCOORD2DVPROC) (const GLdouble *u);
typedef void (*PFGLEVALCOORD2FPROC) (GLfloat u, GLfloat v);
typedef void (*PFGLEVALCOORD2FVPROC) (const GLfloat *u);
typedef void (*PFGLEVALMESH1PROC) (GLenum mode, GLint i1, GLint i2);
typedef void (*PFGLEVALMESH2PROC) (GLenum mode, GLint i1, GLint i2, GLint j1, GLint j2);
typedef void (*PFGLEVALPOINT1PROC) (GLint i);
typedef void (*PFGLEVALPOINT2PROC) (GLint i, GLint j);
typedef void (*PFGLFEEDBACKBUFFERPROC) (GLsizei size, GLenum type, GLfloat *buffer);
typedef void (*PFGLFINISHPROC) (void);
typedef void (*PFGLFLUSHPROC) (void);
typedef void (*PFGLFOGFPROC) (GLenum pname, GLfloat param);
typedef void (*PFGLFOGFVPROC) (GLenum pname, const GLfloat *params);
typedef void (*PFGLFOGIPROC) (GLenum pname, GLint param);
typedef void (*PFGLFOGIVPROC) (GLenum pname, const GLint *params);
typedef void (*PFGLFRONTFACEPROC) (GLenum mode);
typedef void (*PFGLFRUSTUMPROC) (GLdouble left, GLdouble right, GLdouble bottom, GLdouble top, GLdouble zNear, GLdouble zFar);
typedef GLuint (*PFGLGENLISTSPROC) (GLsizei range);
typedef void (*PFGLGENTEXTURESPROC) (GLsizei n, GLuint *textures);
typedef void (*PFGLGETBOOLEANVPROC) (GLenum pname, GLboolean *params);
typedef void (*PFGLGETCLIPPLANEPROC) (GLenum plane, GLdouble *equation);
typedef void (*PFGLGETDOUBLEVPROC) (GLenum pname, GLdouble *params);
typedef GLenum (*PFGLGETERRORPROC) (void);
typedef void (*PFGLGETFLOATVPROC) (GLenum pname, GLfloat *params);
typedef void (*PFGLGETINTEGERVPROC) (GLenum pname, GLint *params);
typedef void (*PFGLGETLIGHTFVPROC) (GLenum light, GLenum pname, GLfloat *params);
typedef void (*PFGLGETLIGHTIVPROC) (GLenum light, GLenum pname, GLint *params);
typedef void (*PFGLGETMAPDVPROC) (GLenum target, GLenum query, GLdouble *v);
typedef void (*PFGLGETMAPFVPROC) (GLenum target, GLenum query, GLfloat *v);
typedef void (*PFGLGETMAPIVPROC) (GLenum target, GLenum query, GLint *v);
typedef void (*PFGLGETMATERIALFVPROC) (GLenum face, GLenum pname, GLfloat *params);
typedef void (*PFGLGETMATERIALIVPROC) (GLenum face, GLenum pname, GLint *params);
typedef void (*PFGLGETPIXELMAPFVPROC) (GLenum map, GLfloat *values);
typedef void (*PFGLGETPIXELMAPUIVPROC) (GLenum map, GLuint *values);
typedef void (*PFGLGETPIXELMAPUSVPROC) (GLenum map, GLushort *values);
typedef void (*PFGLGETPOINTERVPROC) (GLenum pname, GLvoid* *params);
typedef void (*PFGLGETPOLYGONSTIPPLEPROC) (GLubyte *mask);
typedef void (*PFGLGETTEXENVFVPROC) (GLenum target, GLenum pname, GLfloat *params);
typedef void (*PFGLGETTEXENVIVPROC) (GLenum target, GLenum pname, GLint *params);
typedef void (*PFGLGETTEXGENDVPROC) (GLenum coord, GLenum pname, GLdouble *params);
typedef void (*PFGLGETTEXGENFVPROC) (GLenum coord, GLenum pname, GLfloat *params);
typedef void (*PFGLGETTEXGENIVPROC) (GLenum coord, GLenum pname, GLint *params);
typedef void (*PFGLGETTEXIMAGEPROC) (GLenum target, GLint level, GLenum format, GLenum type, GLvoid *pixels);
typedef void (*PFGLGETTEXLEVELPARAMETERFVPROC) (GLenum target, GLint level, GLenum pname, GLfloat *params);
typedef void (*PFGLGETTEXLEVELPARAMETERIVPROC) (GLenum target, GLint level, GLenum pname, GLint *params);
typedef void (*PFGLGETTEXPARAMETERFVPROC) (GLenum target, GLenum pname, GLfloat *params);
typedef void (*PFGLGETTEXPARAMETERIVPROC) (GLenum target, GLenum pname, GLint *params);
typedef void (*PFGLHINTPROC) (GLenum target, GLenum mode);
typedef void (*PFGLINDEXMASKPROC) (GLuint mask);
typedef void (*PFGLINDEXPOINTERPROC) (GLenum type, GLsizei stride, const GLvoid *pointer);
typedef void (*PFGLINDEXDPROC) (GLdouble c);
typedef void (*PFGLINDEXDVPROC) (const GLdouble *c);
typedef void (*PFGLINDEXFPROC) (GLfloat c);
typedef void (*PFGLINDEXFVPROC) (const GLfloat *c);
typedef void (*PFGLINDEXIPROC) (GLint c);
typedef void (*PFGLINDEXIVPROC) (const GLint *c);
typedef void (*PFGLINDEXSPROC) (GLshort c);
typedef void (*PFGLINDEXSVPROC) (const GLshort *c);
typedef void (*PFGLINDEXUBPROC) (GLubyte c);
typedef void (*PFGLINDEXUBVPROC) (const GLubyte *c);
typedef void (*PFGLINITNAMESPROC) (void);
typedef void (*PFGLINTERLEAVEDARRAYSPROC) (GLenum format, GLsizei stride, const GLvoid *pointer);
typedef GLboolean (*PFGLISENABLEDPROC) (GLenum cap);
typedef GLboolean (*PFGLISLISTPROC) (GLuint list);
typedef GLboolean (*PFGLISTEXTUREPROC) (GLuint texture);
typedef void (*PFGLLIGHTMODELFPROC) (GLenum pname, GLfloat param);
typedef void (*PFGLLIGHTMODELFVPROC) (GLenum pname, const GLfloat *params);
typedef void (*PFGLLIGHTMODELIPROC) (GLenum pname, GLint param);
typedef void (*PFGLLIGHTMODELIVPROC) (GLenum pname, const GLint *params);
typedef void (*PFGLLIGHTFPROC) (GLenum light, GLenum pname, GLfloat param);
typedef void (*PFGLLIGHTFVPROC) (GLenum light, GLenum pname, const GLfloat *params);
typedef void (*PFGLLIGHTIPROC) (GLenum light, GLenum pname, GLint param);
typedef void (*PFGLLIGHTIVPROC) (GLenum light, GLenum pname, const GLint *params);
typedef void (*PFGLLINESTIPPLEPROC) (GLint factor, GLushort pattern);
typedef void (*PFGLLINEWIDTHPROC) (GLfloat width);
typedef void (*PFGLLISTBASEPROC) (GLuint base);
typedef void (*PFGLLOADIDENTITYPROC) (void);
typedef void (*PFGLLOADMATRIXDPROC) (const GLdouble *m);
typedef void (*PFGLLOADMATRIXFPROC) (const GLfloat *m);
typedef void (*PFGLLOADNAMEPROC) (GLuint name);
typedef void (*PFGLLOGICOPPROC) (GLenum opcode);
typedef void (*PFGLMAP1DPROC) (GLenum target, GLdouble u1, GLdouble u2, GLint stride, GLint order, const GLdouble *points);
typedef void (*PFGLMAP1FPROC) (GLenum target, GLfloat u1, GLfloat u2, GLint stride, GLint order, const GLfloat *points);
typedef void (*PFGLMAP2DPROC) (GLenum target, GLdouble u1, GLdouble u2, GLint ustride, GLint uorder, GLdouble v1, GLdouble v2, GLint vstride, GLint vorder, const GLdouble *points);
typedef void (*PFGLMAP2FPROC) (GLenum target, GLfloat u1, GLfloat u2, GLint ustride, GLint uorder, GLfloat v1, GLfloat v2, GLint vstride, GLint vorder, const GLfloat *points);
typedef void (*PFGLMAPGRID1DPROC) (GLint un, GLdouble u1, GLdouble u2);
typedef void (*PFGLMAPGRID1FPROC) (GLint un, GLfloat u1, GLfloat u2);
typedef void (*PFGLMAPGRID2DPROC) (GLint un, GLdouble u1, GLdouble u2, GLint vn, GLdouble v1, GLdouble v2);
typedef void (*PFGLMAPGRID2FPROC) (GLint un, GLfloat u1, GLfloat u2, GLint vn, GLfloat v1, GLfloat v2);
typedef void (*PFGLMATERIALFPROC) (GLenum face, GLenum pname, GLfloat param);
typedef void (*PFGLMATERIALFVPROC) (GLenum face, GLenum pname, const GLfloat *params);
typedef void (*PFGLMATERIALIPROC) (GLenum face, GLenum pname, GLint param);
typedef void (*PFGLMATERIALIVPROC) (GLenum face, GLenum pname, const GLint *params);
typedef void (*PFGLMATRIXMODEPROC) (GLenum mode);
typedef void (*PFGLMULTMATRIXDPROC) (const GLdouble *m);
typedef void (*PFGLMULTMATRIXFPROC) (const GLfloat *m);
typedef void (*PFGLNEWLISTPROC) (GLuint list, GLenum mode);
typedef void (*PFGLNORMAL3BPROC) (GLbyte nx, GLbyte ny, GLbyte nz);
typedef void (*PFGLNORMAL3BVPROC) (const GLbyte *v);
typedef void (*PFGLNORMAL3DPROC) (GLdouble nx, GLdouble ny, GLdouble nz);
typedef void (*PFGLNORMAL3DVPROC) (const GLdouble *v);
typedef void (*PFGLNORMAL3FPROC) (GLfloat nx, GLfloat ny, GLfloat nz);
typedef void (*PFGLNORMAL3FVPROC) (const GLfloat *v);
typedef void (*PFGLNORMAL3IPROC) (GLint nx, GLint ny, GLint nz);
typedef void (*PFGLNORMAL3IVPROC) (const GLint *v);
typedef void (*PFGLNORMAL3SPROC) (GLshort nx, GLshort ny, GLshort nz);
typedef void (*PFGLNORMAL3SVPROC) (const GLshort *v);
typedef void (*PFGLNORMALPOINTERPROC) (GLenum type, GLsizei stride, const GLvoid *pointer);
typedef void (*PFGLORTHOPROC) (GLdouble left, GLdouble right, GLdouble bottom, GLdouble top, GLdouble zNear, GLdouble zFar);
typedef void (*PFGLPASSTHROUGHPROC) (GLfloat token);
typedef void (*PFGLPIXELMAPFVPROC) (GLenum map, GLint mapsize, const GLfloat *values);
typedef void (*PFGLPIXELMAPUIVPROC) (GLenum map, GLint mapsize, const GLuint *values);
typedef void (*PFGLPIXELMAPUSVPROC) (GLenum map, GLint mapsize, const GLushort *values);
typedef void (*PFGLPIXELMAPFVPROC) (GLenum map, GLsizei mapsize, const GLfloat *values);
typedef void (*PFGLPIXELMAPUIVPROC) (GLenum map, GLsizei mapsize, const GLuint *values);
typedef void (*PFGLPIXELMAPUSVPROC) (GLenum map, GLsizei mapsize, const GLushort *values);