opengl/gl.d

alias void (*PFGLEDGEFLAGVPROC) (GLboolean *flag);
alias void (*PFGLENABLEPROC) (GLenum cap);
alias void (*PFGLENABLECLIENTSTATEPROC) (GLenum array);
alias void (*PFGLENDPROC) ();
alias void (*PFGLENDLISTPROC) ();
alias void (*PFGLEVALCOORD1DPROC) (GLdouble u);
alias void (*PFGLEVALCOORD1DVPROC) (GLdouble *u);
alias void (*PFGLEVALCOORD1FPROC) (GLfloat u);
alias void (*PFGLEVALCOORD1FVPROC) (GLfloat *u);
alias void (*PFGLEVALCOORD2DPROC) (GLdouble u, GLdouble v);
alias void (*PFGLEVALCOORD2DVPROC) (GLdouble *u);
alias void (*PFGLEVALCOORD2FPROC) (GLfloat u, GLfloat v);
alias void (*PFGLEVALCOORD2FVPROC) (GLfloat *u);
alias void (*PFGLEVALMESH1PROC) (GLenum mode, GLint i1, GLint i2);
alias void (*PFGLEVALMESH2PROC) (GLenum mode, GLint i1, GLint i2, GLint j1, GLint j2);
alias void (*PFGLEVALPOINT1PROC) (GLint i);
alias void (*PFGLEVALPOINT2PROC) (GLint i, GLint j);
alias void (*PFGLFEEDBACKBUFFERPROC) (GLsizei size, GLenum type, GLfloat *buffer);
alias void (*PFGLFINISHPROC) ();
alias void (*PFGLFLUSHPROC) ();
alias void (*PFGLFOGFPROC) (GLenum pname, GLfloat param);
alias void (*PFGLFOGFVPROC) (GLenum pname, GLfloat *params);
alias void (*PFGLFOGIPROC) (GLenum pname, GLint param);
alias void (*PFGLFOGIVPROC) (GLenum pname, GLint *params);
alias void (*PFGLFRONTFACEPROC) (GLenum mode);
alias void (*PFGLFRUSTUMPROC) (GLdouble left, GLdouble right, GLdouble bottom, GLdouble top, GLdouble zNear, GLdouble zFar);
alias GLuint (*PFGLGENLISTSPROC) (GLsizei range);
alias void (*PFGLGENTEXTURESPROC) (GLsizei n, GLuint *textures);
alias void (*PFGLGETBOOLEANVPROC) (GLenum pname, GLboolean *params);
alias void (*PFGLGETCLIPPLANEPROC) (GLenum plane, GLdouble *equation);
alias void (*PFGLGETDOUBLEVPROC) (GLenum pname, GLdouble *params);
alias GLenum (*PFGLGETERRORPROC) ();
alias void (*PFGLGETFLOATVPROC) (GLenum pname, GLfloat *params);
alias void (*PFGLGETINTEGERVPROC) (GLenum pname, GLint *params);
alias void (*PFGLGETLIGHTFVPROC) (GLenum light, GLenum pname, GLfloat *params);
alias void (*PFGLGETLIGHTIVPROC) (GLenum light, GLenum pname, GLint *params);
alias void (*PFGLGETMAPDVPROC) (GLenum target, GLenum query, GLdouble *v);
alias void (*PFGLGETMAPFVPROC) (GLenum target, GLenum query, GLfloat *v);
alias void (*PFGLGETMAPIVPROC) (GLenum target, GLenum query, GLint *v);
alias void (*PFGLGETMATERIALFVPROC) (GLenum face, GLenum pname, GLfloat *params);
alias void (*PFGLGETMATERIALIVPROC) (GLenum face, GLenum pname, GLint *params);
alias void (*PFGLGETPIXELMAPFVPROC) (GLenum map, GLfloat *values);
alias void (*PFGLGETPIXELMAPUIVPROC) (GLenum map, GLuint *values);
alias void (*PFGLGETPIXELMAPUSVPROC) (GLenum map, GLushort *values);
alias void (*PFGLGETPOINTERVPROC) (GLenum pname, GLvoid* *params);
alias void (*PFGLGETPOLYGONSTIPPLEPROC) (GLubyte *mask);
alias GLubyte * (*PFGLGETSTRINGPROC) (GLenum name);
alias void (*PFGLGETTEXENVFVPROC) (GLenum target, GLenum pname, GLfloat *params);
alias void (*PFGLGETTEXENVIVPROC) (GLenum target, GLenum pname, GLint *params);
alias void (*PFGLGETTEXGENDVPROC) (GLenum coord, GLenum pname, GLdouble *params);
alias void (*PFGLGETTEXGENFVPROC) (GLenum coord, GLenum pname, GLfloat *params);
alias void (*PFGLGETTEXGENIVPROC) (GLenum coord, GLenum pname, GLint *params);
alias void (*PFGLGETTEXIMAGEPROC) (GLenum target, GLint level, GLenum format, GLenum type, GLvoid *pixels);
alias void (*PFGLGETTEXLEVELPARAMETERFVPROC) (GLenum target, GLint level, GLenum pname, GLfloat *params);
alias void (*PFGLGETTEXLEVELPARAMETERIVPROC) (GLenum target, GLint level, GLenum pname, GLint *params);
alias void (*PFGLGETTEXPARAMETERFVPROC) (GLenum target, GLenum pname, GLfloat *params);
alias void (*PFGLGETTEXPARAMETERIVPROC) (GLenum target, GLenum pname, GLint *params);
alias void (*PFGLHINTPROC) (GLenum target, GLenum mode);
alias void (*PFGLINDEXMASKPROC) (GLuint mask);
alias void (*PFGLINDEXPOINTERPROC) (GLenum type, GLsizei stride, GLvoid *pointer);
alias void (*PFGLINDEXDPROC) (GLdouble c);
alias void (*PFGLINDEXDVPROC) (GLdouble *c);
alias void (*PFGLINDEXFPROC) (GLfloat c);
alias void (*PFGLINDEXFVPROC) (GLfloat *c);
alias void (*PFGLINDEXIPROC) (GLint c);
alias void (*PFGLINDEXIVPROC) (GLint *c);
alias void (*PFGLINDEXSPROC) (GLshort c);
alias void (*PFGLINDEXSVPROC) (GLshort *c);
alias void (*PFGLINDEXUBPROC) (GLubyte c);
alias void (*PFGLINDEXUBVPROC) (GLubyte *c);
alias void (*PFGLINITNAMESPROC) ();
alias void (*PFGLINTERLEAVEDARRAYSPROC) (GLenum format, GLsizei stride, GLvoid *pointer);
alias GLboolean (*PFGLISENABLEDPROC) (GLenum cap);
alias GLboolean (*PFGLISLISTPROC) (GLuint list);
alias GLboolean (*PFGLISTEXTUREPROC) (GLuint texture);
alias void (*PFGLLIGHTMODELFPROC) (GLenum pname, GLfloat param);
alias void (*PFGLLIGHTMODELFVPROC) (GLenum pname, GLfloat *params);
alias void (*PFGLLIGHTMODELIPROC) (GLenum pname, GLint param);
alias void (*PFGLLIGHTMODELIVPROC) (GLenum pname, GLint *params);
alias void (*PFGLLIGHTFPROC) (GLenum light, GLenum pname, GLfloat param);
alias void (*PFGLLIGHTFVPROC) (GLenum light, GLenum pname, GLfloat *params);
alias void (*PFGLLIGHTIPROC) (GLenum light, GLenum pname, GLint param);
alias void (*PFGLLIGHTIVPROC) (GLenum light, GLenum pname, GLint *params);
alias void (*PFGLLINESTIPPLEPROC) (GLint factor, GLushort pattern);
alias void (*PFGLLINEWIDTHPROC) (GLfloat width);
alias void (*PFGLLISTBASEPROC) (GLuint base);
alias void (*PFGLLOADIDENTITYPROC) ();
alias void (*PFGLLOADMATRIXDPROC) (GLdouble *m);
alias void (*PFGLLOADMATRIXFPROC) (GLfloat *m);
alias void (*PFGLLOADNAMEPROC) (GLuint name);
alias void (*PFGLLOGICOPPROC) (GLenum opcode);
alias void (*PFGLMAP1DPROC) (GLenum target, GLdouble u1, GLdouble u2, GLint stride, GLint order, GLdouble *points);
alias void (*PFGLMAP1FPROC) (GLenum target, GLfloat u1, GLfloat u2, GLint stride, GLint order, GLfloat *points);
alias void (*PFGLMAP2DPROC) (GLenum target, GLdouble u1, GLdouble u2, GLint ustride, GLint uorder, GLdouble v1, GLdouble v2, GLint vstride, GLint vorder, GLdouble *points);
alias void (*PFGLMAP2FPROC) (GLenum target, GLfloat u1, GLfloat u2, GLint ustride, GLint uorder, GLfloat v1, GLfloat v2, GLint vstride, GLint vorder, GLfloat *points);
alias void (*PFGLMAPGRID1DPROC) (GLint un, GLdouble u1, GLdouble u2);
alias void (*PFGLMAPGRID1FPROC) (GLint un, GLfloat u1, GLfloat u2);
alias void (*PFGLMAPGRID2DPROC) (GLint un, GLdouble u1, GLdouble u2, GLint vn, GLdouble v1, GLdouble v2);
alias void (*PFGLMAPGRID2FPROC) (GLint un, GLfloat u1, GLfloat u2, GLint vn, GLfloat v1, GLfloat v2);
alias void (*PFGLMATERIALFPROC) (GLenum face, GLenum pname, GLfloat param);
alias void (*PFGLMATERIALFVPROC) (GLenum face, GLenum pname, GLfloat *params);
alias void (*PFGLMATERIALIPROC) (GLenum face, GLenum pname, GLint param);
alias void (*PFGLMATERIALIVPROC) (GLenum face, GLenum pname, GLint *params);
alias void (*PFGLMATRIXMODEPROC) (GLenum mode);
alias void (*PFGLMULTMATRIXDPROC) (GLdouble *m);
alias void (*PFGLMULTMATRIXFPROC) (GLfloat *m);
alias void (*PFGLNEWLISTPROC) (GLuint list, GLenum mode);
alias void (*PFGLNORMAL3BPROC) (GLbyte nx, GLbyte ny, GLbyte nz);
alias void (*PFGLNORMAL3BVPROC) (GLbyte *v);
alias void (*PFGLNORMAL3DPROC) (GLdouble nx, GLdouble ny, GLdouble nz);
alias void (*PFGLNORMAL3DVPROC) (GLdouble *v);
alias void (*PFGLNORMAL3FPROC) (GLfloat nx, GLfloat ny, GLfloat nz);
alias void (*PFGLNORMAL3FVPROC) (GLfloat *v);
alias void (*PFGLNORMAL3IPROC) (GLint nx, GLint ny, GLint nz);
alias void (*PFGLNORMAL3IVPROC) (GLint *v);
alias void (*PFGLNORMAL3SPROC) (GLshort nx, GLshort ny, GLshort nz);
alias void (*PFGLNORMAL3SVPROC) (GLshort *v);
alias void (*PFGLNORMALPOINTERPROC) (GLenum type, GLsizei stride, GLvoid *pointer);
alias void (*PFGLORTHOPROC) (GLdouble left, GLdouble right, GLdouble bottom, GLdouble top, GLdouble zNear, GLdouble zFar);
alias void (*PFGLPASSTHROUGHPROC) (GLfloat token);
version (NotWindows) {
alias void (*PFGLPIXELMAPFVPROC) (GLenum map, GLint mapsize, GLfloat *values);
alias void (*PFGLPIXELMAPUIVPROC) (GLenum map, GLint mapsize, GLuint *values);
alias void (*PFGLPIXELMAPUSVPROC) (GLenum map, GLint mapsize, GLushort *values);
} else /* version (NotWindows) */ {
alias void (*PFGLPIXELMAPFVPROC) (GLenum map, GLsizei mapsize, GLfloat *values);
alias void (*PFGLPIXELMAPUIVPROC) (GLenum map, GLsizei mapsize, GLuint *values);
alias void (*PFGLPIXELMAPUSVPROC) (GLenum map, GLsizei mapsize, GLushort *values);
}
